--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat",
-  "homepage": "https://AleksMaifet.github.io/",
+  "homepage": "https://AleksMaifet.github.io/Chat",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
